[Layout]   - fix horizontal scroll

--- a/app/assets/stylesheets/admin/components/menu/_index.sass
+++ b/app/assets/stylesheets/admin/components/menu/_index.sass
@@ -3,6 +3,9 @@
     background: #FFFFFF
     box-shadow: 0px 0px 37px rgba(0, 0, 0, 0.09)
 
+    &-wrapper
+      overflow: hidden
+
   &-page-menu
     display: flex
     align-items: center
